
 ** Bug fixes **

  * netmeta():
    - list elements 'P.fixed' and 'P.random' contained wrong values
      for network meta-analyses with a single design which resulted in
      an error using forest.netmeta()

  * netcomb():
     - use correct between-study variance in random effects additive
       network meta-analysis model
     - use correct order of studies to calculate treatment estimates

  * print.summary.netcomb():
    - use correct (abbreviated) names for treatment components

 ** Internal changes **

  * new internal functions compmatch() and compsplit() for argument
    'sep.trts' taking special character from regular expression into
    account, e.g., sep.trts = "."

  * new internal functions bySummary() which is used in netmeta(),
    netmatrix(), and pairwise()

  * createC() can be used with netconnection() objects (for
    disconnected networks)

  * netcomb.netmeta() has been renamed to netcomb()

  * netmeta():
    - report I2 as value between 0 and 1 (instead of 0 and 100)
    - new list element 'trts' (character vector with treatment names)

  * Internal function nma.ruecker():
    - use internal function isquared() from package meta to calculate
      I2

  * Internal function nma.additive():
    - calcuate between-study variance tau2 and heterogeneity statistic
      I2

  * Internal function prcombs():
    - new argument 'seq' to order treatments


*** netmeta, version 0.9-7, 2017-12-06 ***

 ** Major changes **

  * Version of R package meta must be larger or equal 4.9-0

  * New function to produce forest plots with network, direct, and
    indirect evidence

  * New function to estimate additive network meta-analysis for
    combinations of treatments

  * New default in function netsplit(): treatment comparisons are
    selected from upper treatment estimates matrix, i.e., comparisons
    are "A vs B", "A vs C", and "B vs C" for treatments "A", "B", and
    "C" instead of "B vs A", etc.
