@@ -1,7 +1,7 @@
 Package: netmeta
 Title: Network Meta-Analysis using Frequentist Methods
 Version: 6.6-6
-Depends: meta (>= 4.9-0)
+Depends: meta (>= 4.9-1)
 Suggests: colorspace, rgl, hasseDiagram (>= 0.1.3), grid
 Imports: magic, MASS
 Authors@R: c(person("Gerta","Rücker", role="aut"),
